Add constraints to user entity and white tests.